More updates to index pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1= title
+  h1 Kunal's Local Library
   p Welcome to #[em Kunal's Library], a very basic Express website developed to be deployed on Heroku.
 
 
